<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.dietchallenge.second"
    android:background="@drawable/sexy_toon1">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/question1"
            style="@style/textstyle2"
            android:textColor="@color/style_color"/>


        <CheckBox
            style="@style/checkboxStyle"
            android:text="@string/Fruit"/>

        <CheckBox
            style="@style/checkboxStyle"
            android:text="@string/vegetables"/>

        <CheckBox
            style="@style/checkboxStyle"
            android:text="@string/meat"/>

        <CheckBox
            style="@style/checkboxStyle"
            android:text="@string/fish"/>

        <CheckBox
            style="@style/checkboxStyle"
            android:text="@string/beans"/>

        <CheckBox
            style="@style/checkboxStyle"
            android:text="@string/Dairy"/>

        <Button
            android:id="@+id/summary"
            style="@style/mybutton"
            android:layout_marginTop="20dp"
            android:text="@string/question1_submit"/>

    </LinearLayout>

    </RelativeLayout>

</ScrollView>