<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.dietchallenge.Challenge"
    android:background="@drawable/sexy_toon1">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/layout1">

            <TextView
                android:text="@string/diet_challenge"
                android:textColor="@color/colors.xml"
                style="@style/textstyle3"
                android:layout_marginTop="10dp"/>

            <TextView
                android:id="@+id/newMessage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp"
                android:textColor="@color/style_color"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


                <TextView
                    style="@style/button_challenge"
                    android:id="@+id/dayOfWeek"
                    android:textAllCaps="true"
                    android:text="@string/monday"
                    android:textColor="@color/style_color"/>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:baselineAligned="false">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <Spinner
                        android:id="@+id/spinner1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                    </Spinner>

                    <TextView
                        style="@style/button_challenge"
                        android:id="@+id/view_score1"/>

                    <Button
                        style="@style/button_challenge"
                        android:id="@+id/button1"
                        android:text="@string/button1"
                        android:onClick="input1"/>

                    <Button
                        style="@style/button_challenge"
                        android:id="@+id/button2"
                        android:text="@string/button2"
                        android:onClick="input2"/>

                    <Button
                        style="@style/button_challenge"
                        android:id="@+id/button3"
                        android:text="@string/button3"
                        android:onClick="input3"/>

                    <Button
                        style="@style/button_challenge"
                        android:id="@+id/button4"
                        android:text="@string/button4"
                        android:onClick="input4"/>


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <Spinner
                        android:id="@+id/spinner2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                    </Spinner>

                    <TextView
                        style="@style/button_challenge"
                        android:id="@+id/view_score2"/>

                    <Button
                        style="@style/button_challenge"
                        android:id="@+id/button5"
                        android:text="@string/button5"
                        android:onClick="input5"/>

                    <Button
                        style="@style/button_challenge"
                        android:id="@+id/button6"
                        android:text="@string/button6"
                        android:onClick="input6"/>

                    <Button
                        style="@style/button_challenge"
                        android:id="@+id/button7"
                        android:text="@string/button7"
                        android:onClick="input7"/>

                    <Button
                        style="@style/button_challenge"
                        android:id="@+id/button8"
                        android:text="@string/button8"
                        android:onClick="input8"/>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                style="@style/button_challenge"
                android:orientation="horizontal">

                <Button
                    style="@style/button_challenge"
                    android:id="@+id/greeting"
                    android:onClick="show"
                    android:text="@string/results"/>

                <TextView
                    style="@style/button_challenge"
                    android:id="@+id/context"/>

            </LinearLayout>

            <Button
                style="@style/button_challenge"
                android:text="@string/reset"
                android:layout_marginTop="50dp"
                android:id="@+id/enter"
                android:onClick="enter"/>


        </LinearLayout>
    </RelativeLayout>

</ScrollView>
