<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.dietchallenge.second"
    android:background="@drawable/sexy_toon1">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

<TextView
    android:id="@+id/question1"
    style="@style/size1"
    android:textColor="@color/style_color"/>



        <CheckBox
            android:id="@+id/box1"
            android:text="@string/Fruit"
            style="@style/checkboxStyle"/>

        <CheckBox
            android:id="@+id/box2"
            android:text="@string/vegetables"
            style="@style/checkboxStyle"/>

        <CheckBox
            android:id="@+id/box3"
            android:text="@string/nuts"
            style="@style/checkboxStyle"/>


        <Button
            android:id="@+id/summary"
            android:layout_marginTop="20dp"
            android:text="@string/question1_submit"
            style="@style/mybutton"/>

    </LinearLayout>

    </RelativeLayout>

</ScrollView>
